# flux2_architectural_urban_studio

./: .coveragerc  .gitignore  LICENSE.md  README.md  deploy-docker.sh  deploy-windows.ps1  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  ui_flux2_professional.py
.github/workflows/: build.yml  ci.yaml  lint.yml  performance.yml  security.yml  test.yml
benchmarks/: baseline.json  check_regression.py  phase1_baseline.json  phase6_baseline.json  release_candidate_prompt_suite.json  release_quality_baseline.json  run_all.py  run_phase1_benchmarks.py  run_release_candidate_benchmarks.py  safety_accuracy.py
config/grafana/: flux2-dashboard.json  grafana.ini
config/nginx/: flux2.conf
config/prometheus/: alert_rules.yml  prometheus.yml
config/rabbitmq/: definitions.json  rabbitmq.conf
config/redis/: redis.conf
deployment/supervisord/: flux2.conf
deployment/systemd/: flux2-grafana.service  flux2-nginx.service  flux2-prometheus.service  flux2-rabbitmq.service  flux2-redis.service  flux2.service
deployment/windows-nssm/: install_services.bat  install_services.ps1  uninstall_services.ps1
docs/: DEPLOYMENT.md  ERROR_HANDLING.md  PERFORMANCE.md  PHASE10_DEPLOYMENT.md  SIDEBAR_REDESIGN_DETAILED.md
docs/reports/: sidebar_phase6_backward_compatibility_report.md
examples/: tutorial.ipynb
scripts/: model_worker.py
src/flux2/: __init__.py  analytics_client.py  annotations.py  baseline_kpi.py  benchmark_harness.py  cloud_storage.py  context_connectors.py  crash_reporter.py  deployment_profiles.py  distributed_model_loading.py  error_types.py  explainability.py  export_manager.py  feature_flags.py  gif_generator.py  governance.py  governance_artifacts.py  governance_validation.py  gpu_monitor.py  health_check.py  logging_config.py  memory_manager.py  model_cache.py  model_health.py  model_registry.py  nsfw_detector.py  observability.py  performance_metrics.py  policy_profiles.py  progress_tracker.py  project_manager.py  prompt_taxonomy.py  quality_rubric.py  queue_manager.py  report_generator.py  rollout_playbooks.py  safety_config.yaml  safety_pipeline.py  sampling.py  scenario_studio.py  (+6 more)
tests/: test_sidebar_qa_checklist.md
ui/: __init__.py  components.py  components_advanced.py  config.py  error_handler.py  icons.py  sidebar.py  sidebar_copy.py  sidebar_quick_actions.py  state.py  theme.py  utils.py
ui/assets/: config_schema.json  styles.css
ui/pages/: __init__.py  analytics.py  comparison_board.py  debug.py  editor.py  export.py  generator.py  model_comparison.py  performance.py  progress_monitor.py  project_setup.py  queue.py  safety.py  settings.py  site_context.py  upsampler.py  (+1 more)
